[package]
name = "media_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
hound = "3.4.0"  # For reading OGG files
rodio = "0.14.0"  # For audio playback
mp4 = "0.6.0"     # For writing M4B files
id3 = "0.4.0"     # For reading MP3 metadata
anyhow = "1.0"    # For error handling
clap = { version = "3.0", features = ["derive"] }  # For command-line argument parsing
tempfile = "3.20.0"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }